// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A standard order 1`] = `
<li
  className="fhXzbr"
>
  <span
    className="gRzsfa"
  >
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="fKqvxj"
  >
    MOOIE 456 TEST
  </span>
  <span
    className="kIDkAC"
  >
    <span
      className="gLZwgs"
    >
      <span
        className="gLZwgs"
      >
        1
        x 
        Name of the product
      </span>
      <span
        className="gLZwgs"
      >
        2
        x 
        Another product
      </span>
    </span>
  </span>
  <span
    className="FOjhs"
  >
    <span>
      $100.00
    </span>
  </span>
  <span
    className="gWfuXy"
  >
    <span
      className="fsnmAu"
    >
      <span>
        completed
      </span>
    </span>
  </span>
  <span
    className="gJSEqq"
  >
    <a
      aria-label="Download invoice"
      className="FJVi"
      href="http://somelink"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        className="screen-reader-text"
      >
        Invoice
      </span>
    </a>
  </span>
</li>
`;

exports[`An Order with a disabled invoice button 1`] = `
<li
  className="fhXzbr"
>
  <span
    className="gRzsfa"
  >
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="fKqvxj"
  >
    MOOIE 456 TEST
  </span>
  <span
    className="kIDkAC"
  >
    <span
      className="gLZwgs"
    >
      <span
        className="gLZwgs"
      >
        1
        x 
        Name of the product
      </span>
      <span
        className="gLZwgs"
      >
        2
        x 
        Another product
      </span>
    </span>
  </span>
  <span
    className="FOjhs"
  >
    <span>
      $100.00
    </span>
  </span>
  <span
    className="gWfuXy"
  >
    <span
      className="fsnmAu"
    >
      <span>
        pending
      </span>
    </span>
  </span>
  <span
    className="gJSEqq"
  >
    <button
      className="gbpVTx gKiRpK"
      disabled="disabled"
      to="http://somelink"
    >
      <span
        className="screen-reader-text"
      >
        Invoice
      </span>
    </button>
  </span>
</li>
`;
